@@ -7,9 +7,11 @@ libnvidia-allocator.so.1 #PACKAGE# #MINVER#
  NvRmShimFreeMem@Base 440
  NvRmShimGetVersion@Base 440
  NvRmShimMapMemory@Base 440
+ NvRmShimMapMemoryDma@Base 510
  NvRmShimOpenGpuInstance@Base 440
  NvRmShimSessionCreate@Base 440
  NvRmShimSessionDestroy@Base 440
  NvRmShimUnMapMemory@Base 440
+ NvRmShimUnMapMemoryDma@Base 510
  NvRmShimValidateUUID@Base 465
  gbmint_get_backend@Base 495
