@@ -8,4 +8,18 @@ libnvidia-compiler.so.#VERSION# #PACKAGE# #MINVER#
  NvCliGetBufferData@Base 346
  NvCliLinkBitcode@Base 346
  NvCliQueryBinaryType@Base 349
+ __nvvmHandle@Base 510
+ nvvmAddModuleToProgram@Base 510
+ nvvmCompileProgram@Base 510
  nvvmCompilerProperty@Base 280
+ nvvmCreateProgram@Base 510
+ nvvmDestroyProgram@Base 510
+ nvvmGetCompiledResult@Base 510
+ nvvmGetCompiledResultSize@Base 510
+ nvvmGetErrorString@Base 510
+ nvvmGetProgramLog@Base 510
+ nvvmGetProgramLogSize@Base 510
+ nvvmIRVersion@Base 510
+ nvvmLazyAddModuleToProgram@Base 510
+ nvvmVerifyProgram@Base 510
+ nvvmVersion@Base 510
