@@ -23,6 +23,7 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlDeviceGetAccountingPids@Base 319
  nvmlDeviceGetAccountingStats@Base 319
  nvmlDeviceGetActiveVgpus@Base 361.45
+ nvmlDeviceGetAdaptiveClockInfoStatus@Base 510
  nvmlDeviceGetApplicationsClock@Base 304.30
  nvmlDeviceGetArchitecture@Base 450
  nvmlDeviceGetAttributes@Base 450
@@ -41,6 +42,7 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlDeviceGetComputeMode@Base 270
  nvmlDeviceGetComputeRunningProcesses@Base 285
  nvmlDeviceGetComputeRunningProcesses_v2@Base 450.66
+ nvmlDeviceGetComputeRunningProcesses_v3@Base 510
  nvmlDeviceGetCount@Base 270
  nvmlDeviceGetCount_v2@Base 319
  nvmlDeviceGetCpuAffinity@Base 340
@@ -73,11 +75,13 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlDeviceGetGpuInstancePossiblePlacements@Base 450
  nvmlDeviceGetGpuInstancePossiblePlacements_v2@Base 470
  nvmlDeviceGetGpuInstanceProfileInfo@Base 450
+ nvmlDeviceGetGpuInstanceProfileInfoV@Base 510
  nvmlDeviceGetGpuInstanceRemainingCapacity@Base 450
  nvmlDeviceGetGpuInstances@Base 450
  nvmlDeviceGetGpuOperationMode@Base 304.48
  nvmlDeviceGetGraphicsRunningProcesses@Base 346
  nvmlDeviceGetGraphicsRunningProcesses_v2@Base 450.66
+ nvmlDeviceGetGraphicsRunningProcesses_v3@Base 510
  nvmlDeviceGetGridLicensableFeatures@Base 375.82
  nvmlDeviceGetGridLicensableFeatures_v2@Base 410
  nvmlDeviceGetGridLicensableFeatures_v3@Base 440
@@ -96,19 +100,24 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlDeviceGetIrqNum@Base 495
  nvmlDeviceGetMPSComputeRunningProcesses@Base 384.90
  nvmlDeviceGetMPSComputeRunningProcesses_v2@Base 470
+ nvmlDeviceGetMPSComputeRunningProcesses_v3@Base 510
  nvmlDeviceGetMaxClockInfo@Base 285
  nvmlDeviceGetMaxCustomerBoostClock@Base 361.42
  nvmlDeviceGetMaxMigDeviceCount@Base 450
  nvmlDeviceGetMaxPcieLinkGeneration@Base 295
  nvmlDeviceGetMaxPcieLinkWidth@Base 295
  nvmlDeviceGetMemoryAffinity@Base 450
+ nvmlDeviceGetMemoryBusWidth@Base 510
  nvmlDeviceGetMemoryErrorCounter@Base 304
  nvmlDeviceGetMemoryInfo@Base 270
+ nvmlDeviceGetMemoryInfo_v2@Base 510
  nvmlDeviceGetMigDeviceHandleByIndex@Base 450
  nvmlDeviceGetMigMode@Base 450
  nvmlDeviceGetMinorNumber@Base 331.38
  nvmlDeviceGetMultiGpuBoard@Base 340
  nvmlDeviceGetName@Base 270
+ nvmlDeviceGetNumFans@Base 510
+ nvmlDeviceGetNumGpuCores@Base 510
  nvmlDeviceGetNvLinkCapability@Base 361
  nvmlDeviceGetNvLinkErrorCounter@Base 361
  nvmlDeviceGetNvLinkRemoteDeviceType@Base 470
@@ -122,6 +131,7 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlDeviceGetPciInfo@Base 270
  nvmlDeviceGetPciInfo_v2@Base 285
  nvmlDeviceGetPciInfo_v3@Base 384
+ nvmlDeviceGetPcieLinkMaxSpeed@Base 510
  nvmlDeviceGetPcieReplayCounter@Base 346
  nvmlDeviceGetPcieThroughput@Base 346
  nvmlDeviceGetPerformanceState@Base 285
@@ -131,6 +141,7 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlDeviceGetPowerManagementLimit@Base 270
  nvmlDeviceGetPowerManagementLimitConstraints@Base 304
  nvmlDeviceGetPowerManagementMode@Base 270
+ nvmlDeviceGetPowerSource@Base 510
  nvmlDeviceGetPowerState@Base 270
  nvmlDeviceGetPowerUsage@Base 270
  nvmlDeviceGetProcessUtilization@Base 384
@@ -210,6 +221,7 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlGpuInstanceDestroy@Base 450
  nvmlGpuInstanceGetComputeInstanceById@Base 450
  nvmlGpuInstanceGetComputeInstanceProfileInfo@Base 450
+ nvmlGpuInstanceGetComputeInstanceProfileInfoV@Base 510
  nvmlGpuInstanceGetComputeInstanceRemainingCapacity@Base 450
  nvmlGpuInstanceGetComputeInstances@Base 450
  nvmlGpuInstanceGetInfo@Base 450
@@ -252,8 +264,10 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
 #MISSING: 375# nvmlVgpuInstanceGetFbUtilization@Base 370
  nvmlVgpuInstanceGetFrameRateLimit@Base 375
  nvmlVgpuInstanceGetGpuInstanceId@Base 460
+ nvmlVgpuInstanceGetGpuPciId@Base 510
 #MISSING: 375# nvmlVgpuInstanceGetGpuUtilization@Base 370
  nvmlVgpuInstanceGetLicenseInfo@Base 495
+ nvmlVgpuInstanceGetLicenseInfo_v2@Base 510
  nvmlVgpuInstanceGetLicenseStatus@Base 375
  nvmlVgpuInstanceGetMdevUUID@Base 440.59
  nvmlVgpuInstanceGetMetadata@Base 375.26
